# MB-Viewer

./: .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: Android.yml  build.yml
public/: occt-worker.js
scripts/: android-icons.mjs  build-thumbnailer.mjs  copy-occt.mjs  gen-icons.mjs  icon-lib.mjs
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: associations.rs  lib.rs  main.rs
src/app/: App.tsx
src/components/layout/: SettingsMenu.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx
src/components/ui/: ToolButton.tsx  icons.tsx
src/components/viewport/: AxesGizmo.tsx  CameraRig.tsx  MeasureOverlay.tsx  SceneModel.tsx  SectionCaps.tsx  StudioEnvironment.tsx  ViewCube.tsx  Viewport.tsx
src/core/: bvh.ts  desktop.ts  mobile.ts  sample.ts  scene.ts  types.ts
src/core/loaders/: finalizeModel.ts  meshLoaders.ts  occtLoader.ts  openModelFile.ts
src/core/materials/: presets.ts
src/core/measure/: geometry.ts  surface.ts
src/i18n/: index.ts
src/store/: settingsStore.ts  viewerStore.ts
thumbnailer/: Cargo.toml
thumbnailer/src/: lib.rs  mesh.rs  render.rs
