[package]
name = "mb-viewer"
version = "0.1.0"
description = "MB Viewer — multiplatform CAD viewer"
edition = "2021"

# Keep the library name distinct from the binary (required for mobile targets).
[lib]
name = "mb_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Forward files opened via OS association into the running instance.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

# Runtime file-association registration (HKCU) + Explorer refresh.
[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_UI_Shell"] }
